@@ -18,6 +18,9 @@
  */
 package org.apache.pinot.integration.tests.custom;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStream;
@@ -25,9 +28,7 @@ import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import javax.annotation.Nullable;
 import org.apache.avro.file.DataFileWriter;
 import org.apache.avro.generic.GenericData;
@@ -49,10 +50,11 @@ import static org.testng.AssertJUnit.fail;
 
 @Test(suiteName = "CustomClusterIntegrationTest")
 public class TextIndicesTest extends CustomDataQueryClusterIntegrationTest {
-
+  private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
   private static final String DEFAULT_TABLE_NAME = "TextIndicesTest";
 
   private static final String TEXT_COLUMN_NAME = "skills";
+  private static final String TEXT_COLUMN_NAME_CASE_SENSITIVE = "skills_case_sensitive";
   private static final String TEXT_COLUMN_NAME_NATIVE = "skills_native";
   private static final String TIME_COLUMN_NAME = "millisSinceEpoch";
   private static final int NUM_SKILLS = 28;
@@ -87,7 +89,7 @@ public class TextIndicesTest extends CustomDataQueryClusterIntegrationTest {
 
   @Override
   protected List<String> getNoDictionaryColumns() {
-    return Collections.singletonList(TEXT_COLUMN_NAME);
+    return List.of(TEXT_COLUMN_NAME, TEXT_COLUMN_NAME_CASE_SENSITIVE);
   }
 
   @Nullable
@@ -104,13 +106,50 @@ public class TextIndicesTest extends CustomDataQueryClusterIntegrationTest {
 
   @Override
   protected List<FieldConfig> getFieldConfigs() {
-    Map<String, String> propertiesMap = new HashMap<>();
-    propertiesMap.put(FieldConfig.TEXT_FST_TYPE, FieldConfig.TEXT_NATIVE_FST_LITERAL);
+    ObjectNode textColumnIndexes;
+    try {
+      textColumnIndexes = (ObjectNode) OBJECT_MAPPER.readTree("{\"text\": {}}");
+    } catch (JsonProcessingException e) {
+      throw new RuntimeException(e);
+    }
+    FieldConfig textColumnFieldConfig =
+        new FieldConfig(TEXT_COLUMN_NAME, FieldConfig.EncodingType.RAW, null, null, null, null, textColumnIndexes, null,
+            null);
 
-    return Arrays.asList(
-        new FieldConfig(TEXT_COLUMN_NAME, FieldConfig.EncodingType.RAW, FieldConfig.IndexType.TEXT, null, null),
-        new FieldConfig(TEXT_COLUMN_NAME_NATIVE, FieldConfig.EncodingType.RAW, FieldConfig.IndexType.TEXT, null,
-            propertiesMap));
+    ObjectNode textColumnCaseSensitiveIndexes;
+    try {
+      textColumnCaseSensitiveIndexes = (ObjectNode) OBJECT_MAPPER.readTree(
+          "{"
+              + "  \"text\": "
+              + "  {"
+              + "    \"caseSensitive\": \"true\""
+              + "  }"
+              + "}"
+      );
+    } catch (JsonProcessingException e) {
+      throw new RuntimeException(e);
+    }
+    FieldConfig textColumnCaseSensitiveFieldConfig =
+        new FieldConfig(TEXT_COLUMN_NAME_CASE_SENSITIVE, FieldConfig.EncodingType.RAW, null, null, null, null,
+            textColumnCaseSensitiveIndexes, null, null);
+
+    ObjectNode textColumnNativeIndexes;
+    try {
+      textColumnNativeIndexes = (ObjectNode) OBJECT_MAPPER.readTree(
+          "{"
+              + "  \"text\": "
+              + "  {"
+              + "    \"fst\": \"NATIVE\""
+              + "  }"
+              + "}"
+      );
+    } catch (JsonProcessingException e) {
+      throw new RuntimeException(e);
+    }
+    FieldConfig textColumnNativeFieldConfig =
+        new FieldConfig(TEXT_COLUMN_NAME_NATIVE, FieldConfig.EncodingType.RAW, null, null, null, null,
+            textColumnNativeIndexes, null, null);
+    return Arrays.asList(textColumnFieldConfig, textColumnCaseSensitiveFieldConfig, textColumnNativeFieldConfig);
   }
 
   @Override
@@ -122,6 +161,7 @@ public class TextIndicesTest extends CustomDataQueryClusterIntegrationTest {
   public Schema createSchema() {
     return new Schema.SchemaBuilder().setSchemaName(getTableName())
         .addSingleValueDimension(TEXT_COLUMN_NAME, FieldSpec.DataType.STRING)
+        .addSingleValueDimension(TEXT_COLUMN_NAME_CASE_SENSITIVE, FieldSpec.DataType.STRING)
         .addSingleValueDimension(TEXT_COLUMN_NAME_NATIVE, FieldSpec.DataType.STRING)
         .addDateTime(TIME_COLUMN_NAME, FieldSpec.DataType.LONG, "1:MILLISECONDS:EPOCH", "1:MILLISECONDS").build();
   }
@@ -150,6 +190,8 @@ public class TextIndicesTest extends CustomDataQueryClusterIntegrationTest {
     org.apache.avro.Schema avroSchema = org.apache.avro.Schema.createRecord("myRecord", null, null, false);
     avroSchema.setFields(Arrays.asList(new org.apache.avro.Schema.Field(TEXT_COLUMN_NAME,
             org.apache.avro.Schema.create(org.apache.avro.Schema.Type.STRING), null, null),
+        new org.apache.avro.Schema.Field(TEXT_COLUMN_NAME_CASE_SENSITIVE,
+            org.apache.avro.Schema.create(org.apache.avro.Schema.Type.STRING), null, null),
         new org.apache.avro.Schema.Field(TEXT_COLUMN_NAME_NATIVE,
             org.apache.avro.Schema.create(org.apache.avro.Schema.Type.STRING), null, null),
         new org.apache.avro.Schema.Field(TIME_COLUMN_NAME,
@@ -159,6 +201,7 @@ public class TextIndicesTest extends CustomDataQueryClusterIntegrationTest {
       for (int i = 0; i < NUM_RECORDS; i++) {
         GenericData.Record record = new GenericData.Record(avroSchema);
         record.put(TEXT_COLUMN_NAME, skills.get(i % NUM_SKILLS));
+        record.put(TEXT_COLUMN_NAME_CASE_SENSITIVE, skills.get(i % NUM_SKILLS));
         record.put(TEXT_COLUMN_NAME_NATIVE, skills.get(i % NUM_SKILLS));
         record.put(TIME_COLUMN_NAME, System.currentTimeMillis());
         fileWriter.append(record);
@@ -215,8 +258,29 @@ public class TextIndicesTest extends CustomDataQueryClusterIntegrationTest {
       Thread.sleep(100);
     }
 
-    assertTrue(getTextColumnQueryResult(String.format(TEST_TEXT_COLUMN_QUERY_NATIVE, getTableName()))
-        == NUM_MATCHING_RECORDS_NATIVE);
+    assertEquals(getTextColumnQueryResult(String.format(TEST_TEXT_COLUMN_QUERY_NATIVE, getTableName())),
+        NUM_MATCHING_RECORDS_NATIVE);
+  }
+
+  @Test(dataProvider = "useBothQueryEngines")
+  public void testTextSearchCountQueryCaseSensitive(boolean useMultiStageQueryEngine)
+      throws Exception {
+    setUseMultiStageQueryEngine(useMultiStageQueryEngine);
+    // Keep posting queries until all records are consumed
+    long previousResult = 0;
+
+    String queryWithMatch = "SELECT COUNT(*) FROM %s WHERE TEXT_MATCH(skills_case_sensitive, 'Java')";
+    String queryWithoutMatch = "SELECT COUNT(*) FROM %s WHERE TEXT_MATCH(skills_case_sensitive, 'java')";
+    while (getCurrentCountStarResult() < NUM_RECORDS) {
+      long result = getTextColumnQueryResult(String.format(queryWithMatch, getTableName()));
+      assertTrue(result >= previousResult);
+      previousResult = result;
+      Thread.sleep(100);
+    }
+
+    assertEquals(getTextColumnQueryResult(String.format(queryWithMatch, getTableName())), 12000);
+    // Test case sensitive match, all skills are 'Java' not 'java'
+    assertEquals(getTextColumnQueryResult(String.format(queryWithoutMatch, getTableName())), 0);
   }
 
   private long getTextColumnQueryResult(String query)
